背景渐变，引入svg

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,13 +14,15 @@ a {
 	text-decoration: none;
 	color: inherit;
 	&:hover {
-		border-bottom: 1px solid;
+		text-decoration: underline;
 		cursor: pointer;
 	}
 }
 
 body {
 	font-size: 16px;
+	line-height: 1.5;
+	color: #1d2c40;
 	font-family: -apple-system, 'Noto Sans', 'Helvetica Neue', Helvetica,
 		'Nimbus Sans L', Arial, 'Liberation Sans', 'PingFang SC', 'Hiragino Sans GB',
 		'Noto Sans CJK SC', 'Source Han Sans SC', 'Source Han Sans CN',
@@ -35,4 +37,11 @@ h4,
 h5,
 h6 {
 	font-weight: normal;
+}
+
+.icon {
+	width: 1em;
+	height: 1em;
+	fill: currentColor;
+	overflow: hidden;
 }
